cmake_minimum_required(VERSION 3.24)
project(HW1)

set(CMAKE_CXX_STANDARD 17)

add_executable(HW1 main.cpp 2-4_BubbleSort/Bubble_Sort.cpp 9_MergeSort/Merge_Sort.cpp 10_QuickSort/Quick_Sort.cpp 11_HeapSort/Heap_Sort.cpp 8_RadixSort/Radix_Sort.cpp 7_CountingSort/Counting_Sort.cpp 1_SelectionSort/Selection_Sort.cpp 5_InsertionSort/Insertion_Sort.cpp 6_InsertionSort_Binary/Insertion_Sort_binary.cpp 12_ShellSort_Ciur/Shell_Sort_Ciur.cpp 13_ShellSort/Shell_Sort.cpp)
